--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,11 @@ inflection==0.5.1
 kombu==5.3.4
 Markdown==3.4.4
 packaging==23.2
+pexpect==4.9.0
 Pillow==10.0.1
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
 python-dateutil==2.8.2
 python-gettext==5.0
 pytz==2023.3.post1
@@ -33,6 +35,7 @@ PyYAML==6.0.1
 redis==5.0.1
 six==1.16.0
 sqlparse==0.4.4
+Strip==0.0.1.dev14
 tzdata==2023.3
 uritemplate==4.1.1
 vine==5.1.0
